--- a/chillerbot.cfg
+++ b/chillerbot.cfg
@@ -12,4 +12,5 @@ echo "chillerbot"
 echo "chillerbot"
 echo "chillerbot"
 cl_connect "149.202.127.134:8306"
-cl_connect "167.99.218.73:8338"
+#cl_connect "167.99.218.73:8338"
+cl_move_bot 2
