Fix jump and top spawn

--- a/chillerbot.cfg
+++ b/chillerbot.cfg
@@ -11,6 +11,6 @@ echo "chillerbot"
 echo "chillerbot"
 echo "chillerbot"
 echo "chillerbot"
-cl_connect "149.202.127.134:8306"
-#cl_connect "167.99.218.73:8338"
-cl_move_bot 2
+cl_connect "149.202.127.134:8306" #DDNet++ BlmapChill
+#cl_connect "167.99.218.73:8338" #onby fng
+cl_move_bot 1
