Hide server.cfg from github

--- a/chillerbot.cfg
+++ b/chillerbot.cfg
@@ -13,4 +13,5 @@ echo "chillerbot"
 echo "chillerbot"
 cl_connect "149.202.127.134:8306" #DDNet++ BlmapChill
 #cl_connect "167.99.218.73:8338" #onby fng
+exec servers.cfg
 cl_move_bot 1
